--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "manuela-villanueva": "file:",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
