--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "manuela-villanueva": "file:",
-    "next": "14.2.3",
+    "next": "^15.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-floating-whatsapp": "^5.0.8",
